completed home page

--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "responsive-portfolio",
   "version": "1.0.0",
-  "description": "personal portfilio",
+  "description": "personal portfolio",
   "main": "index.js",
   "scripts": {
-    "sass": "sass -w scss/ -o dist/css/ --recursive"
+    "compile": "node-sass -w scss/ -o dist/css/ --recursive"
   },
   "author": "Kevin James",
   "license": "MIT",
   "dependencies": {
-    "sass": "^1.32.8"
+    "node-sass": "^5.0.0"
   }
 }
