--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "1.0.0",
   "description": "personal portfolio",
   "main": "index.js",
+  "homepage": "https//zeus60.github.io/portfolio"
   "scripts": {
-    "compile": "node-sass -w scss/ -o dist/css/ --recursive"
+    "compile": "node-sass -w scss/ -o dist/css/ --recursive",
+    "deploy": "gh-pages -d dist"
   },
   "author": "Kevin James",
   "license": "MIT",
   "dependencies": {
+    "gh-pages": "^3.1.0",
     "node-sass": "^5.0.0"
   }
 }
